--- a/package.json
+++ b/package.json
@@ -108,5 +108,8 @@
     "start": "node app.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "engines": {
+  "node": ">=18.18.0 <19.0.0"
+}
 }
