--- a/package.json
+++ b/package.json
@@ -2,16 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "app.js",
+  "main": "index.js",
   "dependencies": {
     "accepts": "^1.3.8",
     "array-flatten": "^1.1.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-register": "^6.26.0",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "bson": "^6.2.0",
     "buffer-equal-constant-time": "^1.0.1",
     "bytes": "^3.1.2",
     "call-bind": "^1.0.5",
+    "config": "^3.3.11",
     "content-disposition": "^0.5.4",
     "content-type": "^1.0.5",
     "cookie": "^0.5.0",
@@ -43,6 +48,7 @@
     "iconv-lite": "^0.4.24",
     "inherits": "^2.0.4",
     "ipaddr.js": "^1.9.1",
+    "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
     "jwa": "^1.4.1",
     "jws": "^3.2.2",
@@ -65,10 +71,12 @@
     "mongodb": "^6.2.0",
     "mongodb-connection-string-url": "^2.6.0",
     "mongoose": "^8.0.0",
+    "morgan": "^1.10.0",
     "mpath": "^0.9.0",
     "mquery": "^5.0.0",
     "ms": "^2.0.0",
     "negotiator": "^0.6.3",
+    "nodemon": "^3.0.3",
     "object-assign": "^4.1.1",
     "object-inspect": "^1.13.1",
     "on-finished": "^2.4.1",
@@ -90,6 +98,8 @@
     "sift": "^16.0.1",
     "sparse-bitfield": "^3.0.3",
     "statuses": "^2.0.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
     "toidentifier": "^1.0.1",
     "tr46": "^3.0.0",
     "type-is": "^1.6.18",
@@ -102,14 +112,13 @@
     "whatwg-url": "^11.0.0",
     "yallist": "^4.0.0"
   },
-  "devDependencies": {},
+  "type": "commonjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "engines": {
-  "node": ">=18.18.0 <19.0.0"
-}
+    "node": ">=18.18.0 <19.0.0"
+  }
 }
